# --

./: .gitignore  README.md
Diffusion_Model/U1/: README.md
ML/: README.md
ML/.codex-sync/: claude-sync-memory.md
ML/01_Linear_Regression/: README.md  plan.md
ML/02_Logistic_Regression/: README.md  plan.md
ML/03_Decision_Tree/: README.md  plan.md
ML/04_Random_Forest_Ensemble/: README.md  plan.md
ML/05_SVM/: plan.md
ML/06_KNN/: plan.md
ML/07_Naive_Bayes/: plan.md
ML/08_PCA/: plan.md
ML/09_Gradient_Boosting/: plan.md
ML/10_MLP/: plan.md
ML/11_Backprop_Optimizers/: plan.md
ML/12_Regularization/: plan.md
ML/13_CNN/: plan.md
ML/14_L-CNN/: plan.md
ML/15_ResNet/: plan.md
ML/16_RNN_LSTM/: plan.md
ML/17_TCN/: plan.md
ML/18_Autoencoder_VAE/: plan.md
ML/19_GAN/: plan.md
ML/20_Normalizing_Flow/: plan.md
ML/21_Diffusion_Model/: plan.md
ML/22_Attention/: plan.md
ML/23_Transformer/: plan.md
ML/24_ViT/: plan.md
ML/25_RL_DQN/: plan.md
ML/26_RL_Policy_Gradient/: plan.md
ML/27_GNN/: plan.md
ML/28_PINN/: plan.md
ML/plan/: hidden-brewing-shamir.md  snoopy-beaming-raccoon.md
Pa/prog1_mandelbrot_threads/: 0001  main.cpp  mandelbrot  mandelbrotSerial.cpp  mandelbrotThread.cpp
Pa/prog2_vecintrin/: main.cpp  myexp
Pa/prog4_sqrt/: main.cpp  sqrt  sqrt_avx2.cpp
Phy_Compute/hw2/: Readme.md
Phy_Compute/hw3/: hw3.md
Phy_Compute/prog1/: Makefile  Readme.md  main.cpp  sum  sum.ispc  sum_ispc.h
Phy_Compute/prog4/: prog4.py
data_analyze/hmc/: README.md  analyze_flow_topo.py  analyze_scale_t0.py  analyze_sommer.py  analyze_topo_distribution.py  analyze_wilson_loop.py
hmc/: .rsyncignore-pull  .rsyncignore-push  CLAUDE.md  Makefile  README.md  auto_run.sh  package-lock.json
hmc/apps/: run.cpp
hmc/include/: ape.hpp  complex.hpp  gauge_ops.hpp  gradient_flow.hpp  hmc.hpp  io.hpp  lattice.hpp  matrix.hpp  observables.hpp  params.hpp
hmc/plan/: glittery-knitting-lecun.md  plan.md  valiant-hopping-sedgewick.md
hmc/slurm/: job_0Qb2mV.slurm  job_6EHpDB.slurm  job_80pZ1s.slurm  job_9CAVw5.slurm  job_EHYia2.slurm  job_FfvPAi.slurm  job_G4Ikob.slurm  job_GVLyj3.slurm  job_IlVjZV.slurm  job_KePPeA.slurm  job_Lu4022.slurm  job_Mwtvjt.slurm  job_S7mOx8.slurm  job_TOPTpT.slurm  job_Xnpg4E.slurm  (+5 more)
hmc_gpu/: CLAUDE.md  CMakeLists.txt  README.md  notes.txt
hmc_gpu/include/structs/: complex.cuh  dirac.cuh  gauge_operation.cuh  lattice.cuh  math_helper.cuh  matrix.cuh  spinor.cuh
hmc_gpu/lib/kernels/: cg.cu  dirac.cu  gauge_ape.cu  gauge_wilson_flow.cu  lattice.cu  phy_obse.cu  update_Metro.cu  update_hmc.cu  update_hmc_dynferm.cu  use.cu
hmc_gpu/results/t10_s8_beta5.7/: plaquette_results.txt
hmc_gpu/results/t10_s8_beta5.8/: plaquette_results.txt
hmc_gpu/results/t10_s8_beta5.9/: plaquette_results.txt
hmc_gpu/results/t10_s8_beta6.0/: plaquette_results.txt
hmc_gpu/results/t10_s8_beta6.1/: plaquette_results.txt
hmc_gpu/results/t10_s8_beta6.2/: plaquette_results.txt
hmc_gpu/results/t10_s8_beta6.3/: plaquette_results.txt
hmc_gpu/results/t8_s4_beta5.7/: plaquette_results.txt
hmc_gpu/results/t8_s4_beta5.8/: plaquette_results.txt
hmc_gpu/results/t8_s4_beta5.9/: plaquette_results.txt
hmc_gpu/results/t8_s4_beta6.0/: plaquette_results.txt
hmc_gpu/results/t8_s4_beta6.1/: plaquette_results.txt
hmc_gpu/results/t8_s4_beta6.2/: plaquette_results.txt
hmc_gpu/results/t8_s4_beta6.3/: plaquette_results.txt
hmc_gpu/tests/: autocorrelate_hmc.cu  autocorrelate_study.cu  test_all.cu  test_complex_def.cpp  test_dynferm.cu  test_matrix_def.cu  test_metro.cu
qcd/: CMakeLists.txt  CMakePresets.json
qcd/config_generate/: CMakeLists.txt  CMakePresets.json  action.cpp  constant.h  lattice.cpp  lattice.h  lattice_phi4.h  main.cpp  save.cpp  save.h  topological_charge.cpp  update_phi4.cpp  update_pure_gauge.cpp  wilsonloop.cpp
qcd/config_generate_gpu/: CMakeLists.txt  HMCupdate.cu  lattice.cpp  lattice.h  main.cpp  note.txt  update.cu
qcd/pure_gauge_contract/: CMakeLists.txt  WilsonLoop.cpp  action.cpp  lattice.h  main.cpp  note.txt  read.cpp  read.h  save.cpp  save.h
qcd/pure_gauge_contract/contracted_data/: actiontest1.txt  actiontest2.txt  actiontest3.txt  actiontest4.txt  actiontest5.txt
qcd/pure_gauge_contract/contracted_data/t10_s8_beta6.0/: plaqutte_im.txt  plaqutte_re.txt
qcd/pure_gauge_contract/contracted_data/t8_s4_beta0.01atcrlt_lgth/: plaqutte_im.txt  plaqutte_re.txt
qcd/pure_gauge_contract/contracted_data/t8_s4_beta5.50atcrlt_lgth/: plaqutte_im.txt  plaqutte_re.txt
qcd/pure_gauge_contract/contracted_data/t8_s4_beta5.60atcrlt_lgth/: plaqutte_im.txt  plaqutte_re.txt
qcd/pure_gauge_contract/contracted_data/t8_s4_beta5.7/: plaqutte_im.txt  plaqutte_re.txt
qcd/pure_gauge_contract/contracted_data/t8_s4_beta5.70atcrlt_lgth/: plaqutte_im.txt  plaqutte_re.txt
qcd/pure_gauge_contract/contracted_data/t8_s4_beta5.80atcrlt_lgth/: plaqutte_im.txt  plaqutte_re.txt
qcd/pure_gauge_contract/contracted_data/t8_s4_beta5.90atcrlt_lgth/: plaqutte_im.txt  plaqutte_re.txt
qcd/pure_gauge_contract/contracted_data/t8_s4_beta6.0/: plaqutte_im.txt  plaqutte_re.txt
qcd/pure_gauge_contract/contracted_data/t8_s4_beta6.00atcrlt_lgth/: plaqutte_im.txt  plaqutte_re.txt
qcd/pure_gauge_contract/contracted_data/t8_s4_beta6.01atcrlt_lgth/: plaqutte_im.txt  plaqutte_re.txt
qcd/pure_gauge_contract/contracted_data/t8_s4_beta6.0_v2/: plaqutte_im.txt  plaqutte_re.txt
qcd/pure_gauge_contract/contracted_data/t8_s4_beta6.10atcrlt_lgth/: plaqutte_im.txt  plaqutte_re.txt
qcd/pure_gauge_contract/contracted_data/t8_s4_beta6.20atcrlt_lgth/: plaqutte_im.txt  plaqutte_re.txt
qcd/pure_gauge_contract/contracted_data/t8_s4_beta6.3/: plaqutte_im.txt  plaqutte_re.txt
qcd/pure_gauge_contract/contracted_data/t8_s4_beta6.30atcrlt_lgth/: plaqutte_im.txt  plaqutte_re.txt
qcd/pure_gauge_contract/contracted_data/t8_s4_beta6.40atcrlt_lgth/: plaqutte_im.txt  plaqutte_re.txt
stock_strategy/: .gitignore  DAILY_WORKFLOW.md  README.md  config.py
(+3126 files in other folders)
